added support for additional headers
